k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timer-app
  labels:
    name: timer-app
